# cookiecutter-python-project

./: README.md  cookiecutter.json
hooks/: post_gen_project.bat
{{ cookiecutter.package_name }}/: .pre-commit-config.yaml  README.md  pyproject.toml
{{ cookiecutter.package_name }}/src/{{ cookiecutter.package_folder_name }}/: example.py
{{ cookiecutter.package_name }}/tests/: conftest.py  test_example.py
